--- a/canary-app-automatic/rollout.yaml
+++ b/canary-app-automatic/rollout.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: containous/whoami:latest #docker.io/kostiscodefresh/gitops-canary-app:v2.0
+        image: containous/whoami:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
